syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "UserService.proto";
option java_outer_classname = "UserServiceProto";

service UserService {

  rpc create(UserCreate) returns (UserResponse);

}

message UserCreate {

  string firstName = 1;
  string lastName = 2;
  string username = 3;
  string email = 4;
  string password = 5;
  repeated string roles = 6;

}

message UserResponse {

  string firstName = 1;
  string lastName = 2;
  string username = 3;
  string email = 4;
  string password = 5;
  repeated string roles = 6;
  google.protobuf.Timestamp createdAt = 7;

}